--- a/Css/styles2.css
+++ b/Css/styles2.css
@@ -4510,11 +4510,11 @@ textarea.form-control-lg {
   color: #fff;
 }
 
-.container-about{
+/* .container-about{
 
-  /* display: flex; */
+  display: flex;
  
-}
+} */
 
 .text-about
 {
