--- a/Css/styles2.css
+++ b/Css/styles2.css
@@ -11341,6 +11341,7 @@ p {
   justify-content: center;
   padding: 0;
   border-radius: 100%;
+  color:cornsilk;
 }
 
 #mainNav {
@@ -12330,6 +12331,48 @@ align-items: center;
 .contact-smtxtsec
 {
   font-size: 20px;
+  
+
+}
+.contact-smtxtsec  i
+{
+  /* border-style: solid;
+  border-width: 1px; */
+  border-radius: 10px;
+  padding: 8px;
+  margin-left: 10px;
+  /* padding-top: 10px; */
+  
+}
+.contact-smtxtsec a{
+  color: cornsilk;
+}
+.contact-smtxtsec .whatsapp :hover
+{
+color: cornsilk;
+background-color: #27ae60;
+
+}
+
+.contact-smtxtsec .whatsapp i
+{
+  background-color: #2ecc71;
+}
+.contact-smtxtsec .mail i
+{
+  background-color: #4b7bec;
+}
+.contact-smtxtsec .mail i:hover
+{
+  background-color: #3867d6;
+}
+.contact-smtxtsec .map i
+{
+  background-color: #e74c3c;
+}
+.contact-smtxtsec .map i:hover
+{
+  background-color: #c0392b;
 }
 
 .contact-amna 
@@ -12340,4 +12383,9 @@ align-items: center;
 .material-icons
 {
   font-size: 30px;
+}
+
+i .bi
+{
+  color:cornsilk;
 }
